--- a/www/index.html
+++ b/www/index.html
@@ -53,6 +53,7 @@ and open the template in the editor.
                 }, error, success);
                 
                 $("#machine-name").html(device.uuid);
+                $("#date-refresh").html("Aqui entro");
                 
                 //Autenticate user
                 uget({
