--- a/www/index.html
+++ b/www/index.html
@@ -176,7 +176,7 @@ and open the template in the editor.
     <body>
         <div data-role="page" id="pageone">
             <div data-role="header" data-position="fixed">
-                <a href="javascript: Pages.machine();" data-rel="popup" data-position-to="window" data-iconpos="notext" data-role="button" data-icon="bars">Equipos</a>
+                <a href="#" onclick="javascript: Pages.machine();" data-rel="popup" data-position-to="window" data-iconpos="notext" data-role="button" data-icon="bars">Equipos</a>
                 <h1>EnergyWare</h1>
                 <a href="#configurations" data-iconpos="notext" data-role="button" data-icon="calendar">Opciones</a>
             </div>
