--- a/www/index.html
+++ b/www/index.html
@@ -60,7 +60,7 @@ and open the template in the editor.
                                 );
                         
                                 $("#current-machine").append(
-                                    "<label for='" + ob.idmachine + "-2'>" + ob.user + "</label><input type='checkbox' name='machine' id='" + ob.idmachine + "-2' value='" + ob.idmachine + "'>"
+                                    "<label for='" + ob.idmachine + "-2'>" + ob.user + "</label><input type='radio' name='machine' id='" + ob.idmachine + "-2' value='" + ob.idmachine + "'>"
                                 );
                             }
                             
