Al fondo a la derecha

--- a/www/index.html
+++ b/www/index.html
@@ -485,8 +485,8 @@ and open the template in the editor.
             
             <div data-role="footer" data-theme="b" data-position="fixed">
                 <fieldset class="full subbuttons" data-role="controlgroup" data-type="horizontal">
-                    <button data-icon="delete">Cancelar</button>
-                    <button data-icon="check">Aceptar</button>
+                    <button data-icon="delete" data-rel="back" >Cancelar</button>
+                    <button data-icon="check" onclick="javascript: Hours.save();">Aceptar</button>
                 </fieldset>
             </div>
         </div>
