--- a/www/index.html
+++ b/www/index.html
@@ -95,6 +95,7 @@ and open the template in the editor.
                                 }
                             }
                             
+                            $("#grafica").empty();
                             setTimeout(function () {
                                 Morris.Bar({
                                     element: 'grafica',
